--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav>
-    <title>Pablo Olóndriz</title>
+    <p>Pablo Olóndriz</p>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">All Projects</a></li>
