started main section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,27 @@
     </div>
   </header>
 
-  <main></main>
+  <main>
+    <h1 class="h1">Full Stack Developer</h1>
+    <hr class="separator-main">
+    <section>
+      <article>
+        <img src="" alt="">
+          <h3>Legis Music</h3>
+          <p>Website dedicated to Royalty-Free Music</p>
+      </article>
+      <article>
+        <img src="" alt="">
+          <h3>Micripto</h3>
+          <p>Website dedicated to Bitcoin & cryptocurrencies</p>
+      </article>
+      <article>
+        <img src="" alt="">
+          <h3>Olondriz.com</h3>
+          <p>My own personal blog, since 2010</p>
+      </article>
+    </section>
+  </main>
 
   <footer></footer>
 
