main & footer changes

--- a/index.html
+++ b/index.html
@@ -33,29 +33,43 @@
     </div>
   </header>
 
-  <main>
+  <main class="main">
     <h1 class="h1">Full Stack Developer</h1>
-    <hr class="separator-main">
-    <section>
-      <article>
-        <img src="" alt="">
-          <h3>Legis Music</h3>
-          <p>Website dedicated to Royalty-Free Music</p>
+    <section class="main-portfolio">
+      <article class="portfolio-item">
+        <img class="web-screenshot" src="images/legis music screenshot.png" alt="legis music screenshot">
+          <h3 class="portfolio-title">Legis Music</h3>
+          <p class="portfolio-description">Website dedicated to Royalty-Free Music</p>
       </article>
-      <article>
-        <img src="" alt="">
-          <h3>Micripto</h3>
-          <p>Website dedicated to Bitcoin & cryptocurrencies</p>
+      <article class="portfolio-item">
+        <img class="web-screenshot" src="images/micripto screenshot.png" alt="micripto screenshot">
+          <h3 class="portfolio-title">Micripto</h3>
+          <p class="portfolio-description">Website dedicated to Bitcoin & cryptocurrencies</p>
       </article>
-      <article>
-        <img src="" alt="">
-          <h3>Olondriz.com</h3>
-          <p>My own personal blog, since 2010</p>
+      <article class="portfolio-item">
+        <img class="web-screenshot" src="images/olondriz com screenshot.png" alt="olondriz screenshot">
+          <h3 class="portfolio-title">Olondriz.com</h3>
+          <p class="portfolio-description">My own personal blog, since 2010</p>
       </article>
     </section>
   </main>
 
-  <footer></footer>
+  <footer class="footer">
+    <section class="up-footer">
+      <div>
+        <ul>
+          <li>My Projects</li>
+          <li>Contact Me</li>
+          <li>Blog</li>
+        </ul>
+      </div>
+      <div></div>
+      <div></div>
+    </section>
+    <section class="subfooter">
+        <p class="copyright">ⒸCopyright - 2020 <b>Pablo Olóndriz </b>| Made with ❤️ in Barcelona</p>
+    </section>
+  </footer>
 
 </body>
 </html>
