--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <main class="main">
     <h1 class="h1">Full Stack Developer</h1>
+    <h3 class="h3-main">Browse here some of my projects:</h3>
     <section class="main-portfolio">
       <article class="portfolio-item">
         <img class="web-screenshot" src="images/legis music screenshot.png" alt="legis music screenshot">
@@ -57,14 +58,21 @@
   <footer class="footer">
     <section class="up-footer">
       <div>
+        <h4 class="footer-title">ABOUT ME</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
+      </div>
+      <div>
+        <h4 class="footer-title">SITE</h4>
         <ul>
           <li>My Projects</li>
           <li>Contact Me</li>
           <li>Blog</li>
         </ul>
       </div>
-      <div></div>
-      <div></div>
+      <div>
+        <h4 class="footer-title">CONTACT NOW</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
+      </div>
     </section>
     <section class="subfooter">
         <p class="copyright">ⒸCopyright - 2020 <b>Pablo Olóndriz </b>| Made with ❤️ in Barcelona</p>
