--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
           <h3 class="portfolio-title">Micripto</h3>
           <p class="portfolio-description">Website dedicated to Bitcoin & cryptocurrencies</p>
       </article>
-      <article class="portfolio-item">
+      <article class="portfolio-item portfolio-item-last">
         <img class="web-screenshot" src="images/olondriz com screenshot.png" alt="olondriz screenshot">
           <h3 class="portfolio-title">Olondriz.com</h3>
           <p class="portfolio-description">My own personal blog, since 2010</p>
       </article>
-      <button>Load More Projects</button>
+      <button class="btn btn-2 btn-2b">Load More Projects</button>
     </section>
   </main>
 
   <footer class="footer">
     <section class="up-footer">
-      <div>
+      <div class="footer-box">
         <h4 class="footer-title">ABOUT ME</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
+        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
       </div>
-      <div>
+      <div class="footer-box">
         <h4 class="footer-title">SITE</h4>
         <ul>
           <li>My Projects</li>
@@ -70,9 +70,9 @@
           <li>Blog</li>
         </ul>
       </div>
-      <div>
+      <div class="footer-box">
         <h4 class="footer-title">CONTACT NOW</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
+        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
       </div>
     </section>
     <section class="subfooter">
