--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="up-footer">
       <div class="footer-box">
         <h4 class="footer-title">ABOUT ME</h4>
-        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
+        <p class="footer-text">Online entrepreneur, author and Full Stack Developer. Through my professional career, I had the opportunity to dive deep on SEO, Wordpress, Copywiting and web technologies like HTML, CSS, Javascript, Nodejs and React. I'm passionate about the creation from scratch of any online project!</p>
       </div>
       <div class="footer-box">
         <h4 class="footer-title">SITE</h4>
@@ -72,7 +72,7 @@
       </div>
       <div class="footer-box">
         <h4 class="footer-title">CONTACT NOW</h4>
-        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur metus scelerisque porttitor pharetra. Maecenas accumsan elementum ullamcorper. Donec gravida tortor justo, sit amet sagittis dui sagittis egestas.</p>
+        <p class="footer-text">You can contact me sending an email to <b>pablo@olondriz.com</b> or through some social media channels as LinkedIn or Instagram.</p>
       </div>
     </section>
     <section class="subfooter">
