updating styles portfolio home

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section class="main-portfolio">
       <article class="portfolio-item">
         <img class="web-screenshot" src="images/legis music screenshot.png" alt="legis music screenshot">
-          <h3 class="portfolio-title">Legis Music</h3>
-          <p class="portfolio-description">Website dedicated to Royalty-Free Music</p>
+            <h3 class="portfolio-title">Legis Music</h3>
+            <p class="portfolio-description">Website dedicated to Royalty-Free Music</p>
       </article>
       <article class="portfolio-item">
         <img class="web-screenshot" src="images/micripto screenshot.png" alt="micripto screenshot">
@@ -64,7 +64,7 @@
       </div>
       <div class="footer-box">
         <h4 class="footer-title">SITE</h4>
-        <ul>
+        <ul class="footer-list">
           <li>My Projects</li>
           <li>Contact Me</li>
           <li>Blog</li>
@@ -72,7 +72,7 @@
       </div>
       <div class="footer-box">
         <h4 class="footer-title">CONTACT NOW</h4>
-        <p class="footer-text">You can contact me sending an email to <b>pablo@olondriz.com</b> or through some social media channels as LinkedIn or Instagram.</p>
+        <p class="footer-text">You can contact me sending an email to <b>pablo@olondriz.com</b> or through some social media channels as LinkedIn or Instagram. You can also browse my Github account.</p>
       </div>
     </section>
     <section class="subfooter">
