added more projects homepage

--- a/index.html
+++ b/index.html
@@ -51,11 +51,32 @@
           <p class="portfolio-description">Website dedicated to Bitcoin & cryptocurrencies</p>
         </a>
       </article>
-      <article class="portfolio-item portfolio-item-last">
+      <article class="portfolio-item">
         <a class="portfolio-link" href="https://olondriz.com" target="_blank">
           <img class="web-screenshot" src="images/olondriz com screenshot.png" alt="olondriz screenshot">
           <h3 class="portfolio-title">Olondriz.com</h3>
           <p class="portfolio-description">My own personal blog, since 2010</p>
+        </a>
+      </article>
+      <article class="portfolio-item">
+        <a class="portfolio-link" href="https://www.miethereum.com/" target="_blank">
+          <img class="web-screenshot" src="images/miethereum-screenshot.png" alt="miethereum screenshot">
+          <h3 class="portfolio-title">Miethereum</h3>
+          <p class="portfolio-description">Website dedicated to Ethereum</p>
+        </a>
+      </article>
+      <article class="portfolio-item">
+        <a class="portfolio-link" href="https://heladeriabarcelona.com/" target="_blank">
+          <img class="web-screenshot" src="images/lapalau-screenshot.png" alt="lapalau screenshot">
+          <h3 class="portfolio-title">La Palau</h3>
+          <p class="portfolio-description">Local website for an ice-cream shop in Barcelona</p>
+        </a>
+      </article>
+      <article class="portfolio-item portfolio-item-last">
+        <a class="portfolio-link" href="https://dproject-bcn.com/" target="_blank">
+          <img class="web-screenshot" src="images/dproject-screenshot.png" alt="dproject screenshot">
+          <h3 class="portfolio-title">D-Project</h3>
+          <p class="portfolio-description">Architecture company's business website</p>
         </a>
       </article>
     </section>
