--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <article class="portfolio-item">
         <a class="portfolio-link" href="https://heladeriabarcelona.com/" target="_blank">
           <img class="web-screenshot" src="images/lapalau-screenshot.png" alt="lapalau screenshot">
-          <h3 class="portfolio-title">La Palau</h3>
+          <h3 class="portfolio-title">Gelateria Palau</h3>
           <p class="portfolio-description">Local website for an ice-cream shop in Barcelona</p>
         </a>
       </article>
