project and contact page basics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="styles/stylesheet.css">
-  <title>Pablo Olóndriz | Project Portfolio</title>
+  <title>Pablo Olóndriz | Full Stack Developer in Barcelona</title>
 </head>
 
 <body>
