adding styles transitions

--- a/project-detail.html
+++ b/project-detail.html
@@ -23,7 +23,7 @@
 
   <main class="main main-projects-page">
     <h1 class="h1 h1-projects-page">Projects Portfolio</h1>
-    <h3 class="h3-main">Browse here all of my coding and online projects:</h3>
+    <h3 class="h3-main h3-project-detail">Browse here all of my coding <br> and online projects:</h3>
     <section class="main-portfolio main-portfolio-projects-page">
       <article class="portfolio-item">
         <a class="portfolio-link" href="https://legismusic.com/" target="_blank">
