added new projects

--- a/project-detail.html
+++ b/project-detail.html
@@ -60,11 +60,32 @@
           <p class="portfolio-description">Local website for an ice-cream shop in Barcelona</p>
         </a>
       </article>
-      <article class="portfolio-item portfolio-item-last">
+      <article class="portfolio-item">
         <a class="portfolio-link" href="https://dproject-bcn.com/" target="_blank">
           <img class="web-screenshot" src="images/dproject-screenshot.png" alt="dproject screenshot">
           <h3 class="portfolio-title">D-Project</h3>
           <p class="portfolio-description">Architecture company's business website</p>
+        </a>
+      </article>
+      <article class="portfolio-item">
+        <a class="portfolio-link" href="https://www.saladdays.es/" target="_blank">
+          <img class="web-screenshot" src="images/saladdays-screenshot.png" alt="salad days screenshot">
+          <h3 class="portfolio-title">Salad Days</h3>
+          <p class="portfolio-description">Local website for a new restaurant in Barcelona</p>
+        </a>
+      </article>
+      <article class="portfolio-item">
+        <a class="portfolio-link" href="https://josecorpascano.com/" target="_blank">
+          <img class="web-screenshot" src="images/josecorpas-screenshot.png" alt="jose corpas screenshot">
+          <h3 class="portfolio-title">Jose Corpas</h3>
+          <p class="portfolio-description">Personal website of an actor</p>
+        </a>
+      </article>
+      <article class="portfolio-item portfolio-item-last">
+        <a class="portfolio-link" href="https://karmaland4.com/" target="_blank">
+          <img class="web-screenshot" src="images/karmaland-screenshot.png" alt="karmaland screenshot">
+          <h3 class="portfolio-title">Karmaland 4</h3>
+          <p class="portfolio-description">Website for fun, to follow Karmaland's adventures</p>
         </a>
       </article>
     </section>
